--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <div class="about__images" id="work">
                 <div class="about__images__content">
                     <div class="about__images__content__row">
-                        <img src="images/pexels-jessica-lewis-583846.jpg" alt="" class="about__images__content__row__img">
+                        <img src="images/pexels-jessica-lewis-583846.jpg" alt="" class="about__images__content__row__img" onclick="showPic(1)">
                         <img src="images/pexels-jessica-lewis-583846.jpg" alt="" class="about__images__content__row__img">
                         <img src="images/pexels-jessica-lewis-583846.jpg" alt="" class="about__images__content__row__img">
                         <img src="images/pexels-jessica-lewis-583846.jpg" alt="" class="about__images__content__row__img">
@@ -273,9 +273,14 @@
 
 
 
+    <div class="modal">
+        <img src="" alt="" id="modal__img" width="800px">
+        <i class="fas fa-times-circle" id="close"></i>
+    </div>
 
-
+    <script src="https://kit.fontawesome.com/f0a6a8f396.js" crossorigin="anonymous"></script>
     <script src="js/scrolltoanchor.js"></script>
+    <script src="js/modal.js"></script>
     <script src="js/load.js"></script>
     <script src="js/main.js"></script>
 </body>
