final modal commit

--- a/index.html
+++ b/index.html
@@ -99,21 +99,21 @@
                 <div class="about__images__content">
                     <div class="about__images__content__row">
                         <img src="images/pexels-jessica-lewis-583846.jpg" alt="" class="about__images__content__row__img" onclick="showPic(1)">
-                        <img src="images/pexels-jessica-lewis-583846.jpg" alt="" class="about__images__content__row__img">
-                        <img src="images/pexels-jessica-lewis-583846.jpg" alt="" class="about__images__content__row__img">
-                        <img src="images/pexels-jessica-lewis-583846.jpg" alt="" class="about__images__content__row__img">
+                        <img src="images/pexels-jessica-lewis-583846.jpg" alt="" class="about__images__content__row__img" onclick="showPic(2)">
+                        <img src="images/pexels-jessica-lewis-583846.jpg" alt="" class="about__images__content__row__img" onclick="showPic(3)">
+                        <img src="images/580505-desktop-wallpapers-1920x1080-1920x1080-for-mobile.jpg" alt="" class="about__images__content__row__img" onclick="showPic(4)">
                     </div>
                     <div class="about__images__content__row">
-                        <img src="images/pexels-jessica-lewis-583846.jpg" alt="" class="about__images__content__row__img">
-                        <img src="images/pexels-jessica-lewis-583846.jpg" alt="" class="about__images__content__row__img">
-                        <img src="images/pexels-jessica-lewis-583846.jpg" alt="" class="about__images__content__row__img">
-                        <img src="images/pexels-jessica-lewis-583846.jpg" alt="" class="about__images__content__row__img">
+                        <img src="images/pexels-jessica-lewis-583846.jpg" alt="" class="about__images__content__row__img" onclick="showPic(5)">
+                        <img src="images/pexels-jessica-lewis-583846.jpg" alt="" class="about__images__content__row__img" onclick="showPic(6)">
+                        <img src="images/pexels-jessica-lewis-583846.jpg" alt="" class="about__images__content__row__img" onclick="showPic(7)">
+                        <img src="images/pexels-jessica-lewis-583846.jpg" alt="" class="about__images__content__row__img" onclick="showPic(8)">
                     </div>
                     <div class="about__images__content__row about__disabled" id="about__load">
-                        <img src="images/pexels-jessica-lewis-583846.jpg" alt="" class="about__images__content__row__img">
-                        <img src="images/pexels-jessica-lewis-583846.jpg" alt="" class="about__images__content__row__img">
-                        <img src="images/pexels-jessica-lewis-583846.jpg" alt="" class="about__images__content__row__img">
-                        <img src="images/pexels-jessica-lewis-583846.jpg" alt="" class="about__images__content__row__img">
+                        <img src="images/pexels-jessica-lewis-583846.jpg" alt="" class="about__images__content__row__img" onclick="showPic(9)">
+                        <img src="images/pexels-jessica-lewis-583846.jpg" alt="" class="about__images__content__row__img" onclick="showPic(10)">
+                        <img src="images/pexels-jessica-lewis-583846.jpg" alt="" class="about__images__content__row__img" onclick="showPic(11)">
+                        <img src="images/580505-desktop-wallpapers-1920x1080-1920x1080-for-mobile.jpg" alt="" class="about__images__content__row__img" onclick="showPic(12)">
                     </div>
                 </div>
                 <div class="about__images__load">
@@ -277,6 +277,9 @@
         <img src="" alt="" id="modal__img" width="800px">
         <i class="fas fa-times-circle" id="close"></i>
     </div>
+    <div class="modal__bg"></div>
+
+
 
     <script src="https://kit.fontawesome.com/f0a6a8f396.js" crossorigin="anonymous"></script>
     <script src="js/scrolltoanchor.js"></script>
