adaptive menu commit

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             <div class="header__container">
                 <div class="navbar">
                     <img src="images/logo.png" alt="LOGO" id="logo">
+                    <div class="navbar__burger">
+                        <span class="navbar__burger__item"></span>
+                        <span class="navbar__burger__item"></span>
+                        <span class="navbar__burger__item"></span>
+                    </div>
                     <ul class="navbar__list">
                         <li class="navbar__list__li"><a href="#home">HOME</a></li>
                         <li class="navbar__list__li"><a href="#about">ABOUT</a></li>
@@ -23,6 +28,7 @@
                         <li class="navbar__list__li"><a href="#testimonials">TESTIMONIALS</a></li>
                         <li class="navbar__list__li"><a href="#contact">CONTACT</a></li>
                     </ul>
+                    
                 </div>
                 <div class="header__content">
                     <img src="" alt="">
