--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     A you under Seed appear which good give. Own give air without fowl moveth dry first<br>
                     heaven fruit, dominion she'd won't very all.
                 </p>
-                <img src="images/signature.png" alt="" width="220px">
+                <img src="images/signature.png" alt="">
             </div>
             <div class="about__skills">
                 <div class="about__skills__text">
@@ -68,7 +68,7 @@
                     </div>
                 </div>
                 <div class="about__skills__img">
-                    <img src="images/pexels-jessica-lewis-583846.jpg" alt="">
+                    <img src="images/pexels-jessica-lewis-583846.jpg" alt="" id='img'>
                 </div>
             </div>
             <div class="about__icons">
@@ -135,7 +135,8 @@
                         third sixth gathered female creeping bearing behold years.</p>
                 </div>
                 <div class="process__video">
-                    <iframe src="https://player.vimeo.com/video/244752418" width="1170" height="570" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                    <iframe id='vimeo' src="https://player.vimeo.com/video/244752418" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                </div>
             </div>
         </section>
         <section>
@@ -280,7 +281,7 @@
 
 
     <div class="modal">
-        <img src="" alt="" id="modal__img" width="800px">
+        <img src="" alt="" id="modal__img">
         <i class="fas fa-times-circle" id="close"></i>
     </div>
     <div class="modal__bg"></div>
