contact button commit

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                             20 years of combined experience, and know a thing or two<br>
                             about designing websites and mobile apps.
                         </p>
-                        <span><a href="#contact">CONTACT US</a></span>
+                        <a href="#contact">CONTACT US</a>
                     </div>
                 </div>
             </div>
