425px responsive commit

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                             <p>Michael Hopkins</p>
                         </div>
                         <div class="testimonials__content__item">
-                            <h4>“Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab ducimus illo provident error iusto hic optio,<br>
+                            <h4>“Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
                                  asperiores deserunt nobis officia at quasi doloremque quaerat<br>
                                   suscipit dolore possimus esse natus ipsum!”</h4>
                             <p>Noname Someone</p>
